[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_value"
version = "0.0.1"
authors = [
  { name="Steven Carter", email="spcarter@mtu.edu" },
]
description = "A small package to compute the future value of stock portfolios"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "holidays",
    "matplotlib",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/spcarte/portfolio_value"
